# Foundermind

./: .env.example  BACKEND_FEATURES_OVERVIEW.md  BACKEND_VS_FRONTEND_COMPARISON.md  FRONTEND_IMPLEMENTATION_ANALYSIS.md  FRONTEND_IMPLEMENTATION_TODO.md  FRONTEND_TODO_SUMMARY.md  INTERVIEW_PROJECT_GUIDE.md  PROJECT_OVERVIEW.md  README.md  chaidesk.md  idea_submit.md  prompt.md  requirements.txt
foundermind_backend/: .env  .env.example  .gitignore  commands.md  db.sqlite3  dump.rdb  gemini_key.json  inputIdea.md  manage.py  package-lock.json  pyproject.toml  readme.md  requirements.txt
foundermind_backend/apps/agent/: apps.py  critic.py  executor.py  idea_quality.py  models.py  orchestrator.py  planner.py  reporter.py  section_outcomes.py  services.py  tasks.py  tests.py  urls.py  views.py
foundermind_backend/apps/analytics/: agent_metrics.py  comparison_service.py  competitor_matrix.py  drift_detector.py  market_model.py  models.py  services.py  tasks.py  tool_drift_detector.py  urls.py  views.py  weight_recalibrator.py
foundermind_backend/apps/ideas/: models.py  tests.py  urls.py  views.py
foundermind_backend/config/: celery.py
foundermind_backend/core/: auth_middleware.py  exceptions.py  permissions.py
foundermind_backend/foundermind_backend/: __init__.py  asgi.py  urls.py  wsgi.py
foundermind_backend/integrations/: gemini_client.py  model_validator.py  mongo.py  serpapi_client.py
foundermind_backend/tests/: test_analysis.py  test_db.py  test_quality.py  test_quality.sh  test_quality_e2e.py
foundermind_backend/users/: views.py
(+139 files in other folders)
