[project]
name = "foundermind-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dev agrawal"}
]
requires-python = ">=3.10"
dependencies = [
    "django (==5.2.11)",
    "djangorestframework (==3.16.1)",
    "google-search-results (==2.4.2)",
    "mongoengine (==0.29.1)",
    "protobuf (<6)",
    "pyjwt (==2.11.0)",
    "python-dotenv (==1.2.1)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "google-genai (>=1.30.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
